name:                time-extended
version:             0.1.0.0
-- synopsis:            
-- description:         
-- license:             
license-file:        LICENSE
author:              Tony Day
maintainer:          tonyday567@gmail.com
-- copyright:           
-- category:            
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

library
  exposed-modules:     Data.Time.TimeZone
                     , Data.Time.Util
                     , Data.Time.Extended
     
  -- other-modules:       
  -- other-extensions:    
  build-depends:       base >=4.6 && <4.8
                     , time
                     , binary
                     , attoparsec
                     , bytestring
                     , text
                     , old-locale
                     , formatting
                     , containers
                     , timezone-series

  hs-source-dirs:      src      
  default-language:    Haskell2010