name: time-extended
version: 0.0.1
cabal-version: >=1.10
build-type: Simple
license: MIT
license-file: LICENSE.md
maintainer: Tony Day <tonyday567@gmail.com>
bug-reports: https://github.com/tonyday567/time-extended/issues
synopsis: Haskell project time-extended repo 
description: <https://github.com/tonyday567/time-extended>
extra-source-files:
    README.md

library
  exposed-modules:     Data.Time.Extended
     
  build-depends:       base == 4.*
                     , attoparsec
                     , binary
                     , bytestring
                     , containers
                     , formatting
                     , old-locale
                     , text
                     , time
                     , timezone-series

  hs-source-dirs:      src      
  default-language:    Haskell2010